# stock-analysis-platform-2025

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ML-MODELS-IMPLEMENTATION-PLAN.md  USAGE.md  factor-discovery-explained.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx  siteConfig.ts
frontend/src/components/: AdvancedFilters.tsx  BacktestFloatingBar.tsx  InfoPopover.tsx  InfoTooltip.tsx  LineChart.tsx  Pagination.tsx  QuarterSelector.tsx  ScreenerInfo.tsx  StockExplainChat.tsx  StockPriceChart.tsx  StockSearch.tsx
frontend/src/contexts/: QuarterContext.tsx
scripts/: historical_load.py  initial_load.py  load_spy_prices.py  quarterly_update.py  reload_prices.py  run_analysis.py  wipe_price_data.py
src/: __init__.py  config.py  main.py
src/analysis/: __init__.py  altman.py  base.py  bulk_loader.py  fama_french.py  garp_peg.py  graham.py  magic_formula.py  net_net.py  piotroski.py  roic_quality.py
src/api/: __init__.py  app.py
src/backtest/: __init__.py  data_preloader.py  grid_runner.py  models.py  strategy_builder.py
src/database/: __init__.py  connection.py  schema.py
src/factor_discovery/: __init__.py  combination_finder.py  dataset_builder.py  factor_analyzer.py  models.py  recommendation_generator.py  runner.py  sector_calculator.py  storage.py
src/ml_models/: __init__.py  decay_analyzer.py  elastic_net_model.py  gam_model.py  lightgbm_model.py
src/models/: __init__.py  analysis_results.py  financial_data.py
src/scrapers/: __init__.py  data_fetcher.py  fmp_client.py  macro_fetcher.py  ticker_fetcher.py
(+47 files in other folders)
